# practica-3-funciones-primitivas-recursivas

./: .gitignore  CMakeLists.txt  README.md
examples/: test_cases.txt
src/: main.cc
src/counter/: counter.h
src/execution/: recursive-function-execution.cc  recursive-function-execution.h
src/input-strategy/console/: console-input-strategy.cc  console-input-strategy.h
src/input-strategy/file/: file-input-strategy.cc  file-input-strategy.h
src/io/input-strategy/: input-strategy.h
src/io/input-strategy/console/: console-input-strategy.cc  console-input-strategy.h
src/io/input-strategy/file/: file-input-strategy.cc  file-input-strategy.h
src/io/output-strategy/: output-strategy.h
src/io/output-strategy/console/: console-output-strategy.cc  console-output-strategy.h
src/io/output-strategy/file/: file-output-strategy.cc  file-output-strategy.h
src/output-strategy/console/: console-output-strategy.cc  console-output-strategy.h
src/output-strategy/file/: file-output-strategy.cc  file-output-strategy.h
src/parser/: args-parser.cc  args-parser.h
src/primitive-recursive-function/: primitive-recursive-function.cc  primitive-recursive-function.h
src/primitive-recursive-function/derived/power/: power.cc  power.h
src/primitive-recursive-function/derived/product/: product.cc  product.h
src/primitive-recursive-function/derived/sum/: sum.cc  sum.h
src/primitive-recursive-function/execution/: recursive-function-execution.cc  recursive-function-execution.h
src/primitive-recursive-function/factory/: primitive-function-factory.cc  primitive-function-factory.h
src/primitive-recursive-function/operators/: function-operator.cc  function-operator.h
src/primitive-recursive-function/operators/combination/: combination.cc  combination.h
src/primitive-recursive-function/operators/composition/: composition.cc  composition.h
src/primitive-recursive-function/operators/primitive-recursion/: primitive-recursion.cc  primitive-recursion.h
src/primitive-recursive-function/primitives/projection/: projection.cc  projection.h
src/primitive-recursive-function/primitives/successor/: successor.cc  successor.h
src/primitive-recursive-function/primitives/zero/: zero.cc  zero.h
src/primitive-recursive-function/validator/: validator.cc  validator.h
